lavfi/dualinput: fix shortest option.

Fix trac ticket #3315.
(cherry picked from commit 2dc5980d61493e05ccb04271a685fe804d87b155)